force-app/main/default/objects/Developer_Efforts__c/Developer_Efforts__c.object-meta.xml
<CustomObject>
    <label>Developer Effort</label>
    <nameField>
        <displayFormat>DE-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Developer Efforts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>