force-app/main/default/objects/Developer_Efforts__c/fields/Best_Case_LOE__c.field-meta.xml
<CustomField>
    <fullName>Best_Case_LOE__c</fullName>
    <label>Best Case LOE (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>