force-app/main/default/objects/Developer_Efforts__c/fields/Detailed_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Detailed Requirement</label>
    <referenceTo>Requirement__c</referenceTo>
    <relationshipLabel>Developer Efforts</relationshipLabel>
    <relationshipName>Developer_Efforts</relationshipName>
    <type>Lookup</type>
</CustomField>