force-app/main/default/objects/Developer_Efforts__c/fields/Solution_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Solution_Estimate__c</fullName>
    <label>Solution Estimate</label>
    <referenceTo>Solution_Estimate__c</referenceTo>
    <relationshipLabel>Development Effort</relationshipLabel>
    <relationshipName>Developer_Efforts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>