force-app/main/default/objects/Developer_Efforts__c/fields/Work_Date__c.field-meta.xml
<CustomField>
    <fullName>Work_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Work Date</label>
    <type>Date</type>
</CustomField>