force-app/main/default/objects/Developer_Efforts__c/fields/Worst_Case_LOE_Hours__c.field-meta.xml
<CustomField>
    <fullName>Worst_Case_LOE_Hours__c</fullName>
    <label>Worst Case LOE (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>